--- a/terraform-project/terraform.tfvars.example
+++ b/terraform-project/terraform.tfvars.example
@@ -3,3 +3,10 @@ key_pair_name = "class-attendance-mk"
 database_password = "admin123"
 allowed_ssh_cidr = "119.172.132.227/32"
 s3_bucket_name = "attendance-system-frontend-mk-ap-northeast-1"
+
+# Service Control - All disabled to save costs
+enable_ec2 = false
+enable_rds = false
+enable_lambda = false
+enable_s3 = false
+lambda_schedule_enabled = false
